--- a/application.html
+++ b/application.html
@@ -460,7 +460,7 @@ observer.observe(log, { childList:true });
 ========================= */
 let webllmReady = false;
 let webllmEngine = null;
-const WEBLLM_MODEL = "Qwen2.5-1.5B-Instruct-q4f16_1-MLC";
+const WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC";
 
 async function initWebLLM(){
   try {
