--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
         <a class="link" href="#projects">Projects</a>
         <a class="link" href="#mission">Our Mission</a>
         <a class="link" href="#research">Research</a>
+        <a class="link" href="chatbot.html">Chatbot Application</a>
+
       </div>
       <div class="controls">
         <button class="ctrl-btn" id="contrastToggle" aria-pressed="false">High Contrast</button>
