--- a/chatbot.html
+++ b/chatbot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Whala‑style Chatbot UI</title>
+  <title>WhalaBot</title>
   <style>
     :root{
       --bg:#0f172a;           /* slate-900 */
@@ -107,7 +107,7 @@
 <body>
   <div class="app" id="app">
     <div class="topbar">
-      <div class="brand"><span class="dot"></span> <span>Whala‑style Chat</span></div>
+      <div class="brand"><span class="dot"></span> <span>WhalaBot Chat</span></div>
       <span class="chip" title="Research demo only">Demo</span>
       <div class="spacer"></div>
       <div class="toggle-row">
