--- a/chatbot.html
+++ b/chatbot.html
@@ -342,7 +342,7 @@
       log.scrollTop = log.scrollHeight;
     } else {
       // Seed assistant greeting
-      addMsg('assistant', 'Hi! I\'m your Whala chatbot. Ask me anything, or configure the Request Template on the left and press Send.');
+      addMsg('assistant', 'Hi! I\'m your Whala chatbot. Ask me anything!');
     }
   </script>
 </body>
