--- a/application.html
+++ b/application.html
@@ -589,7 +589,7 @@ document.getElementById('tabUpload').addEventListener('click', ()=>activateTab('
 document.getElementById('tabManual').addEventListener('click', ()=>activateTab('tabManual'));
 
 // Load model from online URL
-const MODEL_URL = 'https://huggingface.co/Dawntasy/B-Eye-O-Marker_CNN-V2.1/resolve/main/B-Eye-O-Marker_CNN-V2_Swish.onnx';
+const MODEL_URL = 'https://huggingface.co/Dawntasy/B-Eye-O-Marker_CNN-V2/resolve/main/B-Eye-O-Marker_CNN-V2.onnx';
 
 async function loadModelFromURL(){
   setStatus('Downloading model…');
