--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <div class="timeline">
         <article class="step reveal">
           <h4>First… A focused visual model</h4>
-          <p>We train a <strong>6–7M parameter Convolutional NN</strong> on real biomarkers and eye disease datasets to help doctors diagnose and treat blind/visually-impaired patients.</p>
+          <p>We train a <strong>20 million parameter Convolutional NN</strong> on real biomarkers and eye disease datasets to help doctors diagnose and treat blind/visually-impaired patients.</p>
         </article>
         <article class="step reveal">
           <h4>Second… Natural language + speech</h4>
